--- a/src/client/client/index.html
+++ b/src/client/client/index.html
@@ -1,1 +1,44 @@
-<!DOCTYPE html><html lang=en><head><meta charset=UTF-8><meta name=viewport content="width=device-width,initial-scale=1"><title>微信授权 - 登陆</title></head><body><script type=text/javascript src=index_23_aKvs-b8bW2Vg3fwHozO.js?c063f753883ff9bd3057></script></body></html>
+<!DOCTYPE html><html lang=en><head><meta charset=UTF-8><meta name=viewport content="width=device-width,initial-scale=1"><title>微信授权 - 登陆</title><style>body {
+            margin: 0;
+            padding: 0;
+            background: #2a2d35;
+            width: 100%;
+            height: 100%;
+            padding: 0 60px;
+            box-sizing: border-box;
+        }
+
+        input {
+            width: 100%;
+            height: 40px;
+            margin: 30px 0;
+            border: none;
+            background: none;
+            border-bottom: 1px solid #fff;
+            color: #fff;
+            font-size: 16px;
+            /* border-radius: 5px; */
+        }
+
+        input::placeholder {
+            color: #ccc;
+        }
+
+        .submit {
+            margin: 30px auto;
+            text-align: center;
+            width: 80%;
+            background: #409EFF;
+            line-height: 40px;
+            border-radius: 5px;
+            color: #fff;
+        }
+
+        .text {
+            margin: 0 auto;
+            text-align: center;
+            color: #fff;
+        }
+        .container{
+            display: none;
+        }</style></head><body><div class=container><input id="" placeholder=用户名 name=user> <input id="" placeholder=密码 name=pwd type=password><div class=submit>登陆</div><div class=text>注意：您操作的用户因已在管理端操作修改了信息，请重新登陆进行绑定</div></div><script type=text/javascript src=index_23_aKvs-b8bW2Vg3fwHozO.js?b51f6ef3d50b8a8a3ad3></script></body></html>
